--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,9 @@
-#Wed May 23 13:56:27 ICT 2018
+#Thu May 24 21:09:17 ICT 2018
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
 libs.JOGL.classpath=../opengl/build/cluster/libs/jogl.jar
+run.classpath=${javac.classpath}\:${build.classes.dir}
 javadoc.nonavbar=false
 run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 javac.target=1.6
@@ -29,26 +29,21 @@ build.classes.excludes=**/*.java,**/*.form
 javadoc.encoding=
 javadoc.splitindex=true
 javac.source=1.6
-junit.selected.version=4
+junit.selected.version=3
 run-sys-prop.java.library.path=${libs.JOGL.classpath}-natives-${natives.platform}${path.separator}${libs.GLUEGEN-RT.classpath}-natives-${natives.platform}
 debug.classpath=${run.classpath}
 run.jvmargs=
-build.generated.dir=${build.dir}/generated
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 jar.compress=false
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
 javadoc.private=false
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=manifest.mf
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 javac.classpath=${libs.GLUEGEN-RT.classpath}\:${libs.JOGL.classpath}
-build.generated.sources.dir=${build.dir}/generated-sources
 application.args=
+build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
 javadoc.notree=false
