--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Ninda\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\RafiAdji\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
