tambah pemain awal, menyerang, bertahan

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -19,7 +19,7 @@ build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
 main.class=kelasA.graphicFinal.GraphicFinal
-dist.jar=${dist.dir}/graphicFinal.jar
+dist.jar=${dist.dir}/graphicFinal_NINDA.jar
 javadoc.use=true
 libs.GLUEGEN-RT.classpath=../opengl/build/cluster/libs/gluegen-rt.jar
 build.sysclasspath=ignore
